# web_discovery

./: .gitignore  Plan.md
.clinerules/: 01-ignore-errors.md
ig_vendor_py/: client.py  hello.py  main.py  migrate.py  models.py  profile_assessment.py  profile_search.py  pyproject.toml  session.json  test.py
ig_vendor_py/migrations/: 001_initial.py  002_add_post_id.py  003_uniq_post_id.py
instagram_vendor_discovery/: package-lock.json  package.json  tsconfig.json
instagram_vendor_discovery/prisma/: schema.prisma
instagram_vendor_discovery/prisma/migrations/20250323142916_init/: migration.sql
instagram_vendor_discovery/src/: brave.ts  productInformation.ts  profileAssessment.js  profileAssessment.ts  profileSearch.js  profileSearch.ts
instagram_vendor_discovery/src/ig-test/: graph.ts  search.ts
vendors/: Overview.md  Plan-nodejs.md  Plan-python.md  Plan.md
vendors/ig/: database.py  hello.py  instagram.py  main.py  pyproject.toml
